--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "express": "^4.16.4"
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "express-fileupload": "^1.1.3-alpha.1"
   }
 }
