--- a/api/package.json
+++ b/api/package.json
@@ -1,18 +1,24 @@
 {
-  "name": "api",
-  "version": "1.0.0",
-  "description": "base api for the EOP",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "body-parser": "^1.18.3",
-    "express": "^4.16.4",
-    "express-fileupload": "^1.1.3-alpha.1"
-  }
+    "name": "api",
+    "version": "1.0.0",
+    "description": "base api for the EOP",
+    "main": "app.js",
+    "scripts": {
+        "test": "mocha"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "babel-cli": "^6.26.0",
+        "babel-preset-es2015": "^6.24.1",
+        "body-parser": "^1.18.3",
+        "chai-http": "^4.2.1",
+        "express": "^4.16.4",
+        "express-fileupload": "^1.1.3-alpha.1",
+        "npm": "^6.9.0"
+    },
+    "devDependencies": {
+        "chai": "^4.2.0",
+        "mocha": "^6.1.2"
+    }
 }
